# physics-game

./: CMakeLists.txt  LICENSE  README.md  main.c
.claude/: CLAUDE.md
docs/multithreading/: multithreadAnalysis.xlsx  multithreadPerformance.md
src/: enemy.cpp  enemy.h  entity.cpp  entity.h  environment.cpp  environment.h  level.cpp  level.h  main.cpp  player.cpp  player.h  turret.cpp  turret.h
